Fechas laborales - Visualizacion en front

--- a/i18n/es_AR.csv
+++ b/i18n/es_AR.csv
@@ -39,3 +39,12 @@ Pickup,Sucursal
 "Are you sure you wan't to delete selected Pickups?","¿Está seguro de eliminarr las sucursales seleccionadas?"
 "Pending state","Estado pendiente"
 "Complete state","Estado completo"
+"Monday","Lunes"
+"Tuesday","Martes"
+"Wednesday","Miércoles"
+"Thursday","Jueves"
+"Friday","Viernes"
+"Saturday","Sábado"
+"Sunday","Domingo"
+"Lunch time: %1-%2","Horario de almuerzo: %1-%2"
+"Working days:","Días laborales:"
